# Aarh.Checksums.Native

./: Aaru.Checksums.Native.nuspec  CMakeLists.txt  CMakeSettings.json  README.md  adler32.c  adler32.h  adler32_avx2.c  adler32_neon.c  adler32_ssse3.c  arm_vmull.c  arm_vmull.h  build.sh  codealike.json  crc16.c  crc16.h  crc16_ccitt.c  crc16_ccitt.h  crc32.c  crc32.h  crc32_arm_simd.c  crc32_clmul.c  crc32_simd.h  crc32_vmull.c  crc64.c  crc64.h  crc64_clmul.c  crc64_vmull.c  fletcher16.c  fletcher16.h  fletcher16_avx2.c  fletcher16_neon.c  fletcher16_ssse3.c  fletcher32.c  fletcher32.h  fletcher32_avx2.c  fletcher32_neon.c  fletcher32_ssse3.c  library.c  library.h  simd.c  (+3 more)
tests/: CMakeLists.txt  adler32.cpp  crc16.cpp  crc16_ccitt.cpp  crc32.cpp  crc64.cpp  fletcher16.cpp  fletcher32.cpp  spamsum.cpp
